# check-updates

./: Cargo.toml  README.md  shell.nix
.github/workflows/: rust.yml
src/: cli.rs  config.rs  cron.rs  lock.rs  main.rs  nagios.rs  packagekit.rs
