[package]
name = "check_updates"
version = "0.1.0"
edition = "2024"
description = "Nagios plugin for checking system updates via PackageKit"
license = "GPL-3.0"
repository = "https://github.com/liberodark/check-updates"
readme = "README.md"
keywords = ["nagios", "monitoring", "packagekit", "updates", "security"]
categories = ["command-line-utilities", "system-tools"]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
fs2 = "0.4"
futures = "0.3"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.47", features = ["full"] }
zbus = { version = "5.9", features = ["tokio"] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_code = "deny"
unused_imports = "deny"
